<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:paddingHorizontal="8dp"
    tools:context=".login.LoginFragment">

    <ProgressBar
        android:id="@+id/login_loading_progress_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/status_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/have_account"
            android:visibility="visible" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary_button_background"
            android:text="@string/login_button"
            android:textColor="@color/white"
            android:visibility="visible" />

        <CheckBox
            android:id="@+id/biometric_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/biometric_checkbox" />

    </LinearLayout>

</FrameLayout>
