<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:paddingHorizontal="8dp"
    tools:context=".user_dashboard.UserDashboardFragment">

    <ProgressBar
        android:id="@+id/login_loading_progress_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/user_dashboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_greeting_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/welcome_user" />

        <ProgressBar
            android:id="@+id/user_greeting_progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/user_info_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="visible"
            tools:text="User info" />

        <ProgressBar
            android:id="@+id/user_info_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary_button_background"
            android:text="@string/logout_of_browser_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/fetch_userinfo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/secondary_button_background"
            android:text="@string/fetch_userinfo_button"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/biometric_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/biometric_checkbox" />

        <TextView
            android:id="@+id/error_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"
            tools:text="Error message"
            tools:visibility="visible" />

    </LinearLayout>

</FrameLayout>
